--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
                     <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>Usariver, Arusha - Mandela
                         Road</small>
-                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+255 762 008 009</small>
+                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+255 123 456 789</small>
                     <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@example.com</small>
                 </div>
             </div>
@@ -79,7 +79,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <img src="img/logo1.png" alt="Tembea Africa Logo" width="100%">
+                <img src="img/logo_kilimora.png" alt="Tembea Africa Logo" width="100%">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -138,7 +138,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-8 d-flex align-items-center justify-content-center">
-                                    <img src="img/logo1.png" alt="Kilimora Adventures" class="img-fluid"
+                                    <img src="img/kilimora5.jpg" alt="Kilimora Adventures" class="img-fluid"
                                         style="max-height: 250px; object-fit: contain;">
                                 </div>
                             </div>
@@ -538,7 +538,7 @@
         }
 
         .hero-bg-image.slide-4 {
-            background-image: url('img/tarangire.jpg');
+            background-image: url('img/tembo10.jpeg');
         }
 
         .hero-bg-image.slide-5 {
@@ -550,7 +550,7 @@
         }
 
         .hero-bg-image.slide-7 {
-            background-image: url('img/mount.jpg');
+            background-image: url('img/kilimanjaro5.jpg');
         }
 
         .hero-bg-image.slide-8 {
@@ -1094,7 +1094,8 @@
                         and a commitment to authentic exploration.</p>
                     <p class="mb-4">The company was born from the combined vision of two dedicated founders:
                         <strong>Franklin E. Moshi</strong>, a veteran tour guide and driver with more than 5 years of
-                        "boots-on-the-ground" experience, and <strong>Diana Thomas Mungure</strong>, who left a career
+                        "boots-on-the-ground" experience, and <strong>Reservations Thomas Mungure</strong>, who left a
+                        career
                         in non-funded projects under USAID & CDC where she served for more than 10 years, to follow her
                         true calling in tourism. Together, they turned their shared passion into a mission: to provide
                         guests with more than just a tour, but a life-changing journey.
@@ -2167,7 +2168,7 @@
                             <a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Benson Moshi</h5>
+                            <h5 class="mb-0">Manager Moshi</h5>
                             <small>Director</small>
                         </div>
                     </div>
@@ -2276,24 +2277,24 @@
         <div class="awards-slider">
             <div class="awards-track">
                 <!-- Original Set -->
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
 
                 <!-- Duplicate Set for Seamless Loop -->
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
             </div>
         </div>
     </section>
@@ -2375,14 +2376,14 @@
 
                 <!-- About -->
                 <div class="col-lg-2 col-md-6">
-                    <h5 class="fw-bold mb-3">About Gosheni</h5>
+                    <h5 class="fw-bold mb-3">About Kilimora</h5>
                     <ul class="list-unstyled footer-list">
-                        <li><a href="#">Why Book with Gosheni</a></li>
+                        <li><a href="#">Why Book with Kilimora</a></li>
                         <li><a href="#">Our Guides</a></li>
                         <li><a href="#">Our Vehicles</a></li>
                         <li><a href="#">See All Tours</a></li>
-                        <li><a href="#">Gosheni Foundation</a></li>
-                        <li><a href="#">Gosheni DMC Tanzania</a></li>
+                        <li><a href="#">Kilimora Foundation</a></li>
+                        <li><a href="#">Kilimora DMC Tanzania</a></li>
                     </ul>
                     <!-- <img src="img/logo.png" style="width:160px; margin-top:10px;"> -->
                 </div>
@@ -2452,7 +2453,7 @@
                 <!-- Contact -->
                 <div class="col-lg-4">
                     <h5 class="fw-bold mb-3">Contact</h5>
-                    <p><i class="fa fa-map-marker-alt me-2"></i>Location: Usariver, Arusha</p>
+                    <p><i class="fa fa-map-marker-alt me-2"></i>Location: Usariver, Arusha,Tanzania</p>
                     <p><i class="fa fa-road me-2"></i>Street/Road: Mandela Road</p>
                     <p><i class="fa fa-landmark me-2"></i>Landmark: Near Kennedy House</p>
                 </div>
@@ -2462,7 +2463,7 @@
                     <h5 class="fw-bold mb-3">Traveler Assistance</h5>
                     <p style="font-size: 0.9em; color: #555; margin-bottom: 0.5rem;">All numbers operate in EAT – UTC +3
                     </p>
-                    <p><i class="fa fa-phone me-2"></i>+255 762 008 009</p>
+                    <p><i class="fa fa-phone me-2"></i>+255 123 456 789</p>
                     <p><i class="fa fa-phone me-2"></i>+255 755 252 956</p>
                     <p><i class="fa fa-phone me-2"></i>+255 717 647 994</p>
                 </div>
@@ -2484,7 +2485,7 @@
             </div>
 
             <div class="text-center mt-4 py-3" style="color:#777;">
-                © 2025 Gosheni Safaris — All Rights Reserved
+                © 2025 Kilimora Adventures — All Rights Reserved
             </div>
 
         </div>
