--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
                     <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>Usariver, Arusha - Mandela
                         Road</small>
-                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+255 762 008 009</small>
+                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+255 123 456 789</small>
                     <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@example.com</small>
                 </div>
             </div>
@@ -79,7 +79,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <img src="img/logo1.png" alt="Tembea Africa Logo" width="100%">
+                <img src="img/logo_kilimora.png" alt="Tembea Africa Logo" width="100%">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -138,7 +138,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-8 d-flex align-items-center justify-content-center">
-                                    <img src="img/logo1.png" alt="Kilimora Adventures" class="img-fluid"
+                                    <img src="img/logo_kilimora.png" alt="Kilimora Adventures" class="img-fluid"
                                         style="max-height: 250px; object-fit: contain;">
                                 </div>
                             </div>
@@ -328,7 +328,7 @@
                     <p class="mb-4">
                         The company was born from the combined vision of two dedicated founders: <strong>Franklin E.
                             Moshi</strong>, a veteran tour guide and driver with more than 5 years of
-                        "boots-on-the-ground" experience, and <strong>Diana Thomas Mungure</strong>, who left a career
+                        "boots-on-the-ground" experience, and <strong>Sarah Thomas</strong>, who left a career
                         in non-funded projects under USAID & CDC where she served for more than 10 years, to follow her
                         true calling in tourism. Together, they turned their shared passion into a mission: to provide
                         guests with more than just a tour, but a life-changing journey.
@@ -545,7 +545,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="position-relative h-100">
-                        <img class="img-fluid rounded w-100 h-100" src="img/ngo.jpg" alt="Gosheni Team"
+                        <img class="img-fluid rounded w-100 h-100" src="img/ngo.jpg" alt="Kilimora Team"
                             style="object-fit: cover;">
                     </div>
                 </div>
@@ -572,7 +572,7 @@
                                 style="height: 250px; object-fit: cover;">
                         </div>
                         <div class="card-body p-4">
-                            <h5 class="mb-1">Benson Moshi</h5>
+                            <h5 class="mb-1">Peter Moshi</h5>
                             <p class="card-text small">As Director of Kilimora Tour, his goal is to make sure that
                                 tour guides deliver successfully. Peter enjoys the travel business as it allows him to
                                 share experiences, points of views and ideas.</p>
@@ -587,7 +587,7 @@
                                 style="height: 250px; object-fit: cover;">
                         </div>
                         <div class="card-body p-4">
-                            <h5 class="mb-1">Benson Moshi</h5>
+                            <h5 class="mb-1">Merlin</h5>
                             <p class="card-text small">Merlin handles sales. She loves the outdoors and a big fan of
                                 nature. She is loved by our guests for her attentiveness in dealing with customers, fast
                                 responses, and eagerness to help at all times.</p>
@@ -602,7 +602,7 @@
                                 style="height: 250px; object-fit: cover;">
                         </div>
                         <div class="card-body p-4">
-                            <h5 class="mb-1">Benson Moshi</h5>
+                            <h5 class="mb-1">Linda</h5>
                             <p class="card-text small">Linda handles reservations. She is dedicated and loved by her
                                 clients and co-workers. She is very enthusiastic and engaging and goes out of her way to
                                 ensure that clients get the best safari experience.</p>
@@ -769,14 +769,14 @@
 
         <div class="awards-slider">
             <div class="awards-track">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
 
             </div>
         </div>
@@ -873,14 +873,14 @@
 
                 <!-- About -->
                 <div class="col-lg-2 col-md-6">
-                    <h5 class="fw-bold mb-3">About Gosheni</h5>
+                    <h5 class="fw-bold mb-3">About Kilimora</h5>
                     <ul class="list-unstyled footer-list">
-                        <li><a href="#">Why Book with Gosheni</a></li>
+                        <li><a href="#">Why Book with Kilimora</a></li>
                         <li><a href="#">Our Guides</a></li>
                         <li><a href="#">Our Vehicles</a></li>
                         <li><a href="#">See All Tours</a></li>
-                        <li><a href="#">Gosheni Foundation</a></li>
-                        <li><a href="#">Gosheni DMC Tanzania</a></li>
+                        <li><a href="#">Kilimora Foundation</a></li>
+                        <li><a href="#">Kilimora DMC Tanzania</a></li>
                     </ul>
                     <!-- <img src="img/logo.png" style="width:160px; margin-top:10px;"> -->
                 </div>
@@ -950,17 +950,19 @@
                 <!-- Contact -->
                 <div class="col-lg-4">
                     <h5 class="fw-bold mb-3">Contact</h5>
-                    <p><i class="fa fa-map-marker-alt me-2"></i>Arusha â€“ Nairobi Road Sakina kwa Idd House no. 80 P.O
-                        Box 7337 Arusha, Tanzania</p>
+                    <p><i class="fa fa-map-marker-alt me-2"></i>Location: Usariver, Arusha,Tanzania</p>
+                    <p><i class="fa fa-road me-2"></i>Street/Road: Mandela Road</p>
+                    <p><i class="fa fa-landmark me-2"></i>Landmark: Near Kennedy House</p>
                 </div>
 
                 <!-- Traveler Assistance -->
                 <div class="col-lg-4">
                     <h5 class="fw-bold mb-3">Traveler Assistance</h5>
-                    <p><i class="fa fa-phone me-2"></i>+255 715 636 967 (EAT â€“ UTC +3)</p>
-                    <p><i class="fa fa-phone me-2"></i>+256 767 828 384 (EAT â€“ UTC +3)</p>
-                    <p><i class="fa fa-phone me-2"></i>+255 753 090 908 (PHT â€“ UTC +8)</p>
-                    <p><i class="fa fa-envelope me-2"></i>info@goshenisafaris.com</p>
+                    <p style="font-size: 0.9em; color: #555; margin-bottom: 0.5rem;">All numbers operate in EAT – UTC +3
+                    </p>
+                    <p><i class="fa fa-phone me-2"></i>+255 123 456 789</p>
+                    <p><i class="fa fa-phone me-2"></i>+255 755 252 956</p>
+                    <p><i class="fa fa-phone me-2"></i>+255 717 647 994</p>
                 </div>
 
                 <!-- Social Icons -->
@@ -980,7 +982,7 @@
             </div>
 
             <div class="text-center mt-4 py-3" style="color:#777;">
-                Â© 2025 Kilimora Tour â€” All Rights Reserved
+                © 2025 Kilimora Adventures — All Rights Reserved
             </div>
 
         </div>
