--- a/booking.html
+++ b/booking.html
@@ -79,7 +79,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <img src="img/logo1.png" alt="Tembea Africa Logo" width="100%">
+                <img src="img/logo_kilimora.png" alt="Tembea Africa Logo" width="100%">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -123,7 +123,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-8 d-flex align-items-center justify-content-center">
-                                    <img src="img/logo1.png" alt="Kilimora Adventures" class="img-fluid" style="max-height: 250px; object-fit: contain;">
+                                    <img src="img/logo_kilimora.png" alt="Kilimora Adventures" class="img-fluid" style="max-height: 250px; object-fit: contain;">
                                 </div>
                             </div>
                         </div>
