--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <img src="img/logo1.png" alt="Tembea Africa Logo" width="100%">
+                <img src="img/logo_kilimora.png" alt="Tembea Africa Logo" width="100%">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -138,7 +138,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-8 d-flex align-items-center justify-content-center">
-                                    <img src="img/logo1.png" alt="Kilimora Adventures" class="img-fluid"
+                                    <img src="img/logo_kilimora.png" alt="Kilimora Adventures" class="img-fluid"
                                         style="max-height: 250px; object-fit: contain;">
                                 </div>
                             </div>
@@ -359,14 +359,14 @@
                             <h4 class="mb-3">Tanzania</h4>
                             <p class="mb-1"><strong>Address:</strong> Arusha, Kilimanjaro, Tanzania</p>
                             <p class="mb-1"><strong>Telephone:</strong> +255 715 636 967</p>
-                            <p class="mb-1"><strong>Email:</strong> info@goshenisafaris.com</p>
+                            <p class="mb-1"><strong>Email:</strong> info@Kilimorasafaris.com</p>
                         </div>
 
                         <!-- Kenya -->
                         <div class="col-md-6">
                             <h4 class="mb-3">Kenya</h4>
                             <p class="mb-1"><strong>Address:</strong> Nairobi, Kenya</p>
-                            <p class="mb-1"><strong>Email:</strong> magicalkenya@goshenisafaris.com</p>
+                            <p class="mb-1"><strong>Email:</strong> magicalkenya@Kilimorasafaris.com</p>
                         </div>
 
                         <!-- China -->
@@ -380,7 +380,7 @@
                             <h4 class="mb-3">Sustainability & Feedback</h4>
                             <p class="mb-2">For questions about our sustainability practices or feedback:</p>
                             <p class="mb-1"><strong>Mobile/WhatsApp:</strong> +255 715 636 967 (EAT)</p>
-                            <p class="mb-1"><strong>Email:</strong> sustainability@goshenisafaris.com</p>
+                            <p class="mb-1"><strong>Email:</strong> sustainability@Kilimorasafaris.com</p>
                         </div>
 
                         <!-- Traveler Assistance -->
@@ -390,7 +390,7 @@
                             <p class="mb-1"><i class="fa fa-phone-alt me-2 text-primary"></i>+255 715 636 967 (EAT)</p>
                             <p class="mb-1"><i class="fa fa-phone-alt me-2 text-primary"></i>+256 767 828 384 (EAT)</p>
                             <p class="mb-1"><i class="fa fa-phone-alt me-2 text-primary"></i>+255 753 090 908 (PHT)</p>
-                            <p class="mb-1"><i class="fa fa-envelope me-2 text-primary"></i>info@goshenisafaris.com</p>
+                            <p class="mb-1"><i class="fa fa-envelope me-2 text-primary"></i>info@Kilimorasafaris.com</p>
                         </div>
 
                     </div>
@@ -402,7 +402,7 @@
             <div class="row mt-5 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="col-12">
                     <iframe class="position-relative w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3982.978187803613!2d36.68065367373516!3d-3.355152396619938!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x18371c6d860e3d2d%3A0xe517336b9c9f688e!2sGosheni%20Safaris%20Africa!5e0!3m2!1sen!2stz!4v1709900000000!5m2!1sen!2stz"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3982.978187803613!2d36.68065367373516!3d-3.355152396619938!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x18371c6d860e3d2d%3A0xe517336b9c9f688e!2sKilimora%20Safaris%20Africa!5e0!3m2!1sen!2stz!4v1709900000000!5m2!1sen!2stz"
                         frameborder="0" style="min-height: 450px; border:0;" allowfullscreen="" aria-hidden="false"
                         tabindex="0"></iframe>
                 </div>
@@ -522,14 +522,14 @@
 
                 <!-- About -->
                 <div class="col-lg-2 col-md-6">
-                    <h5 class="fw-bold mb-3">About Gosheni</h5>
+                    <h5 class="fw-bold mb-3">About Kilimora</h5>
                     <ul class="list-unstyled footer-list">
-                        <li><a href="#">Why Book with Gosheni</a></li>
+                        <li><a href="#">Why Book with Kilimora</a></li>
                         <li><a href="#">Our Guides</a></li>
                         <li><a href="#">Our Vehicles</a></li>
                         <li><a href="#">See All Tours</a></li>
-                        <li><a href="#">Gosheni Foundation</a></li>
-                        <li><a href="#">Gosheni DMC Tanzania</a></li>
+                        <li><a href="#">Kilimora Foundation</a></li>
+                        <li><a href="#">Kilimora DMC Tanzania</a></li>
                     </ul>
                     <!-- <img src="img/logo.png" style="width:160px; margin-top:10px;"> -->
                 </div>
@@ -609,7 +609,7 @@
                     <p><i class="fa fa-phone me-2"></i>+255 715 636 967 (EAT â€“ UTC +3)</p>
                     <p><i class="fa fa-phone me-2"></i>+256 767 828 384 (EAT â€“ UTC +3)</p>
                     <p><i class="fa fa-phone me-2"></i>+255 753 090 908 (PHT â€“ UTC +8)</p>
-                    <p><i class="fa fa-envelope me-2"></i>info@goshenisafaris.com</p>
+                    <p><i class="fa fa-envelope me-2"></i>info@Kilimorasafaris.com</p>
                 </div>
 
                 <!-- Social Icons -->
@@ -629,7 +629,7 @@
             </div>
 
             <div class="text-center mt-4 py-3" style="color:#777;">
-                Â© 2025 Gosheni Safaris â€” All Rights Reserved
+                Â© 2025 Kilimora Adventures â€” All Rights Reserved
             </div>
 
         </div>
