--- a/destination-serengeti.html
+++ b/destination-serengeti.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Serengeti National Park - Gosheni Safaris</title>
+    <title>Serengeti National Park - Kilimora Adventures</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords">
     <meta content="Experience the endless plains of Serengeti National Park and the Great Migration."
@@ -126,7 +126,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <img src="img/logo1.png" alt="Tembea Africa Logo" width="100%">
+                <img src="img/logo_kilimora.png" alt="Tembea Africa Logo" width="100%">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -185,7 +185,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-8 d-flex align-items-center justify-content-center">
-                                    <img src="img/logo1.png" alt="Kilimora Adventures" class="img-fluid"
+                                    <img src="img/logo_kilimora.png" alt="Kilimora Adventures" class="img-fluid"
                                         style="max-height: 250px; object-fit: contain;">
                                 </div>
                             </div>
@@ -716,14 +716,14 @@
 
                 <!-- About -->
                 <div class="col-lg-2 col-md-6">
-                    <h5 class="fw-bold mb-3">About Gosheni</h5>
+                    <h5 class="fw-bold mb-3">About Kilimora</h5>
                     <ul class="list-unstyled footer-list">
-                        <li><a href="#">Why Book with Gosheni</a></li>
+                        <li><a href="#">Why Book with Kilimora</a></li>
                         <li><a href="#">Our Guides</a></li>
                         <li><a href="#">Our Vehicles</a></li>
                         <li><a href="#">See All Tours</a></li>
-                        <li><a href="#">Gosheni Foundation</a></li>
-                        <li><a href="#">Gosheni DMC Tanzania</a></li>
+                        <li><a href="#">Kilimora Foundation</a></li>
+                        <li><a href="#">Kilimora DMC Tanzania</a></li>
                     </ul>
                     <!-- <img src="img/logo.png" style="width:160px; margin-top:10px;"> -->
                 </div>
@@ -803,7 +803,7 @@
                     <p><i class="fa fa-phone me-2"></i>+255 715 636 967 (EAT â€“ UTC +3)</p>
                     <p><i class="fa fa-phone me-2"></i>+256 767 828 384 (EAT â€“ UTC +3)</p>
                     <p><i class="fa fa-phone me-2"></i>+255 753 090 908 (PHT â€“ UTC +8)</p>
-                    <p><i class="fa fa-envelope me-2"></i>info@goshenisafaris.com</p>
+                    <p><i class="fa fa-envelope me-2"></i>info@Kilimorasafaris.com</p>
                 </div>
 
                 <!-- Social Icons -->
@@ -823,7 +823,7 @@
             </div>
 
             <div class="text-center mt-4 py-3" style="color:#777;">
-                Â© 2025 Gosheni Safaris â€” All Rights Reserved
+                Â© 2025 Kilimora Adventures â€” All Rights Reserved
             </div>
 
         </div>
