--- a/exp-migration.html
+++ b/exp-migration.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Great Migration Safari - Gosheni Safaris</title>
+    <title>Great Migration Safari - Kilimora Adventures</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords">
     <meta content="Experience the endless plains of Serengeti National Park and the Great Migration."
@@ -99,7 +99,7 @@
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
                     <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>Usariver, Arusha - Mandela
                         Road</small>
-                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+255 762 008 009</small>
+                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+255 123 456 789</small>
                     <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@example.com</small>
                 </div>
             </div>
@@ -126,7 +126,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <img src="img/logo1.png" alt="Tembea Africa Logo" width="100%">
+                <img src="img/logo_kilimora.png" alt="Tembea Africa Logo" width="100%">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -185,7 +185,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-8 d-flex align-items-center justify-content-center">
-                                    <img src="img/logo1.png" alt="Kilimora Adventures" class="img-fluid"
+                                    <img src="img/logo_kilimora.png" alt="Kilimora Adventures" class="img-fluid"
                                         style="max-height: 300px; object-fit: contain;">
                                 </div>
                             </div>
@@ -645,7 +645,7 @@
                     <h4 class="text-white mb-3">Contact</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Usariver, Arusha - Mandela Road (Near
                         Kennedy House)</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+255 762 008 009</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+255 123 456 789</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+255 755 252 956</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+255 717 647 994</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
@@ -695,7 +695,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Gosheni Safaris</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="#">Kilimora Adventures</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
