--- a/index.html
+++ b/index.html
@@ -1208,7 +1208,7 @@
                 <!-- TANZANIA MIGRATION -->
                 <div class="col-lg-4 col-md-6 tour-card-item tanzania">
                     <div class="tour-card">
-                        <img src="img/tarangire.jpg" class="tour-img" alt="Kilimora Safari Tour">
+                        <img src="img/tembo10.jpeg" class="tour-img" alt="Kilimora Safari Tour">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 10 Days</span>
