--- a/index.html
+++ b/index.html
@@ -1565,8 +1565,8 @@
             <div class="row align-items-center">
                 <!-- Left Images -->
                 <div class="col-lg-6 position-relative">
-                    <img src="img/mount.jpg" class="img-fluid rounded main-img" alt="">
-                    <img src="img/kili.jpg" class="img-fluid rounded small-img shadow-lg" alt="">
+                    <img src="img/kilimanjaro5.jpg" class="img-fluid rounded main-img" alt="">
+                    <img src="img/kilimanjaro3.jpg" class="img-fluid rounded small-img shadow-lg" alt="">
                 </div>
 
                 <!-- Right Text -->
