--- a/index.html
+++ b/index.html
@@ -1565,7 +1565,7 @@
             <div class="row align-items-center">
                 <!-- Left Images -->
                 <div class="col-lg-6 position-relative">
-                    <img src="img/kilimanjaro5.jpg" class="img-fluid rounded main-img" alt="">
+                    <img src="img/kilimanjaro2.jpg" class="img-fluid rounded main-img" alt="">
                     <img src="img/kilimanjaro3.jpg" class="img-fluid rounded small-img shadow-lg" alt="">
                 </div>
 
@@ -1590,8 +1590,8 @@
             <div class="row align-items-center mb-5 flex-lg-row-reverse">
                 <!-- Right Images -->
                 <div class="col-lg-6 position-relative">
-                    <img src="img/tarangire.jpg" class="img-fluid rounded main-img" alt="Kilimora Safari">
-                    <img src="img/tarangire.jpg" class="img-fluid rounded small-img shadow-lg" alt="">
+                    <img src="img/tembo12.jpeg" class="img-fluid rounded main-img" alt="Kilimora Safari">
+                    <img src="img/tembo4.jpg" class="img-fluid rounded small-img shadow-lg" alt="">
                 </div>
 
                 <!-- Left Text -->
