--- a/index.html
+++ b/index.html
@@ -1729,7 +1729,7 @@
 
                             <div class="col-lg-4 col-md-6">
                                 <div class="shadow-sm" style="border-radius:10px; overflow:hidden;">
-                                    <img src="img/tarangire.jpg" class="img-fluid" alt="">
+                                    <img src="img/tembo11.jpeg" class="img-fluid" alt="">
                                     <div class="p-3">
                                         <h5 class="fw-bold">
                                             10 Reasons to Book a Low-Season Safari in Tanzania (That Most Travelers
@@ -1741,7 +1741,7 @@
 
                             <div class="col-lg-4 col-md-6">
                                 <div class="shadow-sm" style="border-radius:10px; overflow:hidden;">
-                                    <img src="img/Elephant-9.jpg" class="img-fluid" alt="">
+                                    <img src="img/chui-eat.jpeg" class="img-fluid" alt="">
                                     <div class="p-3">
                                         <h5 class="fw-bold">
                                             Pros and Cons of Booking Locally vs. Through Your Country’s Travel Agent
