--- a/index.html
+++ b/index.html
@@ -1729,7 +1729,7 @@
 
                             <div class="col-lg-4 col-md-6">
                                 <div class="shadow-sm" style="border-radius:10px; overflow:hidden;">
-                                    <img src="img/tembo11.jpeg" class="img-fluid" alt="">
+                                    <img src="img/monkey.jpeg" class="img-fluid" alt="">
                                     <div class="p-3">
                                         <h5 class="fw-bold">
                                             10 Reasons to Book a Low-Season Safari in Tanzania (That Most Travelers
@@ -1759,7 +1759,7 @@
 
                             <div class="col-lg-4 col-md-6">
                                 <div class="shadow-sm" style="border-radius:10px; overflow:hidden;">
-                                    <img src="img/twiga.jpg" class="img-fluid" alt="">
+                                    <img src="img/pundamilia6.jpeg" class="img-fluid" alt="">
                                     <div class="p-3">
                                         <h5 class="fw-bold"> 10 Reasons to Book a Low-Season Safari in Tanzania (That
                                             Most Travelers Miss).</h5>
@@ -1769,7 +1769,7 @@
 
                             <div class="col-lg-4 col-md-6">
                                 <div class="shadow-sm" style="border-radius:10px; overflow:hidden;">
-                                    <img src="img/Elephant-9.jpg" class="img-fluid" alt="">
+                                    <img src="img/chui16.jpeg" class="img-fluid" alt="">
                                     <div class="p-3">
                                         <h5 class="fw-bold"> Pros and Cons of Booking Locally vs. Through Your Country’s
                                             Travel Agent</h5>
@@ -1779,7 +1779,7 @@
 
                             <div class="col-lg-4 col-md-6">
                                 <div class="shadow-sm" style="border-radius:10px; overflow:hidden;">
-                                    <img src="img/t4.jpg" class="img-fluid" alt="">
+                                    <img src="img/monkey1.jpeg" class="img-fluid" alt="">
                                     <div class="p-3">
                                         <h5 class="fw-bold"> Pros and Cons of Booking Locally vs. Through Your Country’s
                                             Travel Agent</h5>
