--- a/index.html
+++ b/index.html
@@ -2169,7 +2169,7 @@
                         </div>
                         <div class="text-center p-4">
                             <h5 class="mb-0">Manager Moshi</h5>
-                            <small>Director</small>
+                            <small>Destination</small>
                         </div>
                     </div>
                 </div>
@@ -2200,8 +2200,8 @@
                             <a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Full Name</h5>
-                            <small>Designation</small>
+                            <h5 class="mb-0">Diana</h5>
+                            <small>Director</small>
                         </div>
                     </div>
                 </div>
