--- a/index.html
+++ b/index.html
@@ -2277,13 +2277,13 @@
         <div class="awards-slider">
             <div class="awards-track">
                 <!-- Original Set -->
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
                 <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
                 <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
                 <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
                 <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
 
                 <!-- Duplicate Set for Seamless Loop -->
@@ -2463,8 +2463,8 @@
                     <h5 class="fw-bold mb-3">Traveler Assistance</h5>
                     <p style="font-size: 0.9em; color: #555; margin-bottom: 0.5rem;">All numbers operate in EAT – UTC +3
                     </p>
-                    <p><i class="fa fa-phone me-2"></i>+255 123 456 789</p>
-                    <p><i class="fa fa-phone me-2"></i>+255 755 252 956</p>
+                    <p><i class="fa fa-phone me-2"></i>+255 796 440 555</p>
+                    <p><i class="fa fa-phone me-2"></i>+255 762 008 009</p>
                     <p><i class="fa fa-phone me-2"></i>+255 717 647 994</p>
                 </div>
 
