--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                     <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>Usariver, Arusha - Mandela
                         Road</small>
                     <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+255 123 456 789</small>
-                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@example.com</small>
+                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i>Kilimora25@gmail.com</small>
                 </div>
             </div>
             <div class="col-lg-4 text-center text-lg-end">
@@ -769,14 +769,14 @@
 
         <div class="awards-slider">
             <div class="awards-track">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
                 <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
                 <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
                 <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
 
             </div>
         </div>
