--- a/index.html
+++ b/index.html
@@ -334,7 +334,9 @@
                                 class="letter-gradient">e</span>
                         </h1>
                         <p class="hero-subtitle-main">
-                            Immerse yourself in the rich traditions of Tanzania's iconic Masai people
+                            Discover the soul of Tanzania through the iconic Masai people. With <b>Kilimora
+                                Adventure</b> , immerse yourself in rich traditions, vibrant culture, and meaningful
+                            local experiences.
                         </p>
                     </div>
 
@@ -352,7 +354,9 @@
                                 class="letter-gradient">n</span><span class="letter-gradient">s</span>
                         </h1>
                         <p class="hero-subtitle-main">
-                            Witness the endless plains and the spectacular circle of life
+
+                            Witness the endless plains and the spectacular circle of life as Kilimora Adventure guides
+                            you through one of Africa’s most iconic landscapes.
                         </p>
                     </div>
 
