--- a/index.html
+++ b/index.html
@@ -374,7 +374,9 @@
                                 class="letter-gradient">e</span><span class="letter-gradient">r</span>
                         </h1>
                         <p class="hero-subtitle-main">
-                            Explore the world's largest intact volcanic caldera teeming with wildlife
+
+                            Explore the world’s largest intact volcanic caldera teeming with wildlife as Kilimora
+                            Adventure takes you deep into this natural masterpiece.
                         </p>
                     </div>
 
@@ -392,7 +394,9 @@
                                 class="letter-gradient">r</span><span class="letter-gradient">e</span>
                         </h1>
                         <p class="hero-subtitle-main">
-                            Home to vast elephant herds and iconic baobab trees
+
+                            Discover vast elephant herds and iconic baobab trees with Kilimora Adventure in one of
+                            Tanzania’s most remarkable landscapes.
                         </p>
                     </div>
 
@@ -408,7 +412,9 @@
                                 class="letter-gradient">a</span>
                         </h1>
                         <p class="hero-subtitle-main">
-                            Discover tree-climbing lions and flocks of pink flamingos
+
+                            Discover tree-climbing lions and flocks of pink flamingos as Kilimora Adventure guides you
+                            through this unique natural paradise.
                         </p>
                     </div>
 
