--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>Usariver, Arusha - Mandela
                         Road</small>
                     <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+255 123 456 789</small>
-                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@example.com</small>
+                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i>Kilimora25@gmail.com</small>
                 </div>
             </div>
             <div class="col-lg-4 text-center text-lg-end">
@@ -432,7 +432,9 @@
                                 class="letter-gradient">s</span><span class="letter-gradient">s</span>
                         </h1>
                         <p class="hero-subtitle-main">
-                            Experience the accesible beauty of the "Little Serengeti"
+
+                            Experience the accessible beauty of the “Little Serengeti” as Kilimora Adventure brings you
+                            closer to Tanzania’s wild landscapes.
                         </p>
                     </div>
 
@@ -451,7 +453,8 @@
                                 class="letter-gradient">o</span>
                         </h1>
                         <p class="hero-subtitle-main">
-                            Reach the roof of Africa on an unforgettable mountain adventure
+                            Reach the Roof of Africa on an unforgettable mountain adventure as Kilimora Adventure guides
+                            you to Africa’s highest peak.
                         </p>
                     </div>
 
@@ -469,7 +472,8 @@
                                 class="letter-gradient">s</span><span class="letter-gradient">e</span>
                         </h1>
                         <p class="hero-subtitle-main">
-                            Relax on pristine white beaches with crystal-clear turquoise waters
+                            Relax on pristine white beaches with crystal-clear turquoise waters as Kilimora Adventure
+                            takes you to island bliss.
                         </p>
                     </div>
                 </div>
