--- a/about.html
+++ b/about.html
@@ -769,13 +769,24 @@
 
         <div class="awards-slider">
             <div class="awards-track">
+                <!-- Original Set -->
                 <img src="img/logo1.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
                 <img src="img/logo1.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+
+                <!-- Duplicate Set for Seamless Loop -->
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
                 <img src="img/logo1.png" alt="Awards" class="award-img">
 
             </div>
