--- a/index.html
+++ b/index.html
@@ -2293,12 +2293,12 @@
                 <!-- Original Set -->
                 <img src="img/logo1.png" alt="Awards" class="award-img">
                 <img src="img/logo1.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
                 <img src="img/logo1.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
                 <img src="img/logo1.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
 
                 <!-- Duplicate Set for Seamless Loop -->
                 <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
