--- a/index.html
+++ b/index.html
@@ -2301,14 +2301,14 @@
                 <img src="img/logo1.png" alt="Awards" class="award-img">
 
                 <!-- Duplicate Set for Seamless Loop -->
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
-                <img src="img/logo_kilimora.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
             </div>
         </div>
     </section>
