--- a/index.html
+++ b/index.html
@@ -2174,7 +2174,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/team_member_male.png" alt="Kilimora Safari">
+                            <img class="img-fluid" src="img/diana-profile.jpg" alt="Kilimora Safari">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -19px;">
                             <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -2182,8 +2182,8 @@
                             <a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Manager Moshi</h5>
-                            <small>Destination</small>
+                            <h5 class="mb-0">Diana</h5>
+                            <small>Deputy Director</small>
                         </div>
                     </div>
                 </div>
